spacing fix

--- a/homepage/scss/home.scss
+++ b/homepage/scss/home.scss
@@ -1005,7 +1005,7 @@ h6 {
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-        height: 580px;
+        height: 460px;
         display: flex;
         align-items: center;
         position: relative;
@@ -1061,6 +1061,9 @@ h6 {
             right: 0;
             bottom: 0;
             height: 682px;
+        }
+        @media(min-width: 1800px){
+            height: 500px;
         }
         &:after{
             content:"";
